[build-system]
requires = ["wheel", "setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qulacs"
version = "0.5.0"
description = "Quantum circuit simulator for research"
authors = [ 
    { name = "QunaSys", Email = "qulacs@qunasys.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Communications :: Email"
]

[project.urls]
homepage = "http://www.qulacs.org"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "openfermion",
    "mypy",
    "pybind11-stubgen"
]

test = [
    "openfermion"
]

ci = [
    "openfermion",
    "mypy",
    "pybind11-stubgen"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.cibuildwheel]
build = "cp3*-macosx_x86_64 cp3*-manylinux_x86_64 cp3*-win_amd64"
skip = "cp311-* cp36-*"

environment = { QULACS_OPT_FLAGS = "-mtune=haswell -mfpmath=both" }
build-verbosity = "1"

test-command = "python {project}/python/test/test_qulacs.py"
test-requires = "numpy scipy openfermion"

[tool.cibuildwheel.linux]
before-build = """\
yum install wget -y && \
wget -q https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz && \
tar -zxf boost_1_76_0.tar.gz && \
cd boost_1_76_0 && ./bootstrap.sh && ./b2 headers && \
cp -r boost /usr/local/include && rm -rf {project}/build \
"""

[tool.cibuildwheel.windows]
before-test = "rm -rf {project}/build"


[tool.cibuildwheel.macos]
# In GitHub Actions virtual environment macos-10.15/20201115.1,
# linking some functions from libgomp fails since the linker cannot find
# some library files from gcc-8 installed via Homebrew.
# The following command fixes this issue by (brew) re-linking files from gcc-8.
# cf. https://stackoverflow.com/a/55500164
before-build = """\
brew install gcc@8 && brew link --overwrite gcc@8 && \
brew upgrade && brew install -f boost && \
brew link boost && rm -rf {project}/build\
"""
repair-wheel-command = "delocate-listdeps {wheel} && script/fix_wheel_osx.sh {wheel} {dest_dir} && delocate-listdeps {wheel}"
