[build-system]
requires = ["wheel", "setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "qulacs"
description = "Quantum circuit simulator for research"
authors = [ 
    { name = "QunaSys", Email = "qulacs@qunasys.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Communications :: Email"
]

[tool.setuptools.dynamic]
version = {attr = "qulacs._version.__version__"}

[tool.setuptools_scm]
write_to = "pysrc/qulacs/_version.py"

[project.urls]
homepage = "http://www.qulacs.org"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "openfermion",
    "mypy",
    "pybind11-stubgen"
]

test = [
    "openfermion"
]

ci = [
    "openfermion",
    "mypy",
    "pybind11-stubgen"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.cibuildwheel]
environment = { QULACS_OPT_FLAGS = "-mtune=haswell -mfpmath=both" }
build-verbosity = "1"

test-command = "python {project}/python/test/test_qulacs.py"
test-requires = "numpy scipy openfermion"

[tool.cibuildwheel.linux]
before-build = """\
yum install wget -y && \
wget -q https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz && \
tar -zxf boost_1_76_0.tar.gz && \
cd boost_1_76_0 && ./bootstrap.sh && ./b2 headers && \
cp -r boost /usr/local/include && rm -rf {project}/build \
"""

[tool.cibuildwheel.windows]
before-test = "rm -rf {project}/build"

[tool.cibuildwheel.macos]
before-build = """\
brew upgrade && brew install -f boost && \
brew link boost && rm -rf {project}/build\
"""
archs = ["x86_64", "arm64"]
repair-wheel-command = "delocate-listdeps {wheel} && script/fix_wheel_osx.sh {wheel} {dest_dir} && delocate-listdeps {wheel}"
